# SignalRoute

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.adapters  compose.yml  config.toml  docker-bake.hcl
.github/workflows/: ci.yml
cmake/: FindHiredis.cmake  FindRdKafka.cmake  Findh3.cmake  SignalRouteDependencies.cmake  SignalRouteOptions.cmake  SignalRouteSanitizers.cmake
config/: signalroute.docker.toml  signalroute.toml
db/migrations/: 001_initial.sql  002_h3_column.sql  003_compression_policy.sql  004_geofence_expiry.sql
docs/: README.md  architecture.md  components.md  skeleton_plan.md
docs/ingestion/: pipeline.md
docs/matching/: matching_server.md
docs/plans/: ci_and_sanitizers.md  container_packaging.md  dependency_strategy.md  finish_plan.md  package_strategy_lock.md  parallel_implementation.md
docs/query/: spatial_ops.md
docs/storage/: schema.md  spatial.md
proto/: CMakeLists.txt
proto/signalroute/: admin.proto  geofence.proto  location.proto  matching.proto  query.proto
scripts/: verify-local.sh
src/: main.cpp
src/common/: CMakeLists.txt
src/common/admin/: admin_endpoint_handler.cpp  admin_endpoint_handler.h  admin_http_handler.cpp  admin_http_handler.h  admin_service.cpp  admin_service.h  dependency_health.cpp  dependency_health.h  lifecycle.cpp  lifecycle.h
src/common/clients/: postgres_client.cpp  postgres_client.h  redis_client.cpp  redis_client.h
src/common/composition/: composition_root.cpp  composition_root.h  metrics_event_handlers.cpp  metrics_event_handlers.h
src/common/config/: config.cpp  config.h
src/common/events/: all_events.h  event_bus.h  gateway_events.h  geofence_events.h  history_events.h  location_events.h  matching_events.h  state_events.h  worker_events.h
src/common/kafka/: kafka_consumer.cpp  kafka_consumer.h  kafka_producer.cpp  kafka_producer.h
src/common/logging/: structured_log.cpp  structured_log.h
src/common/metrics/: metrics.cpp  metrics.h
src/common/proto/: domain_conversions.cpp  domain_conversions.h  generated_conversions.cpp  generated_conversions.h  geofence_payload_codec.cpp  geofence_payload_codec.h  location_payload_codec.cpp  location_payload_codec.h  matching_payload_codec.cpp  matching_payload_codec.h  wire_types.h
src/common/spatial/: h3_index.cpp  h3_index.h  haversine.cpp  haversine.h
src/common/types/: device_state.h  geofence_types.h  location_event.h  result.h
src/gateway/: CMakeLists.txt  admission_control.cpp  admission_control.h  gateway_service.cpp  gateway_service.h  rate_limiter.cpp  rate_limiter.h  validator.cpp  validator.h
src/geofence/: CMakeLists.txt  dwell_checker.cpp  dwell_checker.h  evaluator.cpp  evaluator.h  fence_registry.cpp  fence_registry.h  geofence_engine.cpp  geofence_engine.h  geofence_event_handlers.cpp  geofence_event_handlers.h  point_in_polygon.cpp  point_in_polygon.h
src/matching/: CMakeLists.txt  match_context.h  matching_service.cpp  matching_service.h  matching_types.h  nearest_strategy.cpp  nearest_strategy.h  reservation_manager.cpp  reservation_manager.h  strategy_interface.h  strategy_registry.cpp  strategy_registry.h
src/processor/: CMakeLists.txt  dedup_window.cpp  dedup_window.h  history_writer.cpp  history_writer.h  processing_loop.cpp  processing_loop.h  processor_event_handlers.cpp  processor_event_handlers.h  processor_service.cpp  processor_service.h  sequence_guard.cpp  sequence_guard.h  state_writer.cpp  state_writer.h
src/query/: CMakeLists.txt  latest_handler.cpp  latest_handler.h  nearby_handler.cpp  nearby_handler.h  query_service.cpp  query_service.h  trip_handler.cpp  trip_handler.h
src/runtime/: CMakeLists.txt  admin_request_loop.cpp  admin_request_loop.h  admin_socket_server.cpp  admin_socket_server.h  metrics_exporter.cpp  metrics_exporter.h  runtime_application.cpp  runtime_application.h
src/transport/grpc/: CMakeLists.txt  admin_grpc_adapter.cpp  admin_grpc_adapter.h  gateway_grpc_adapter.cpp  gateway_grpc_adapter.h  query_grpc_adapter.cpp  query_grpc_adapter.h
src/workers/: CMakeLists.txt  dlq_replay_worker.cpp  dlq_replay_worker.h  h3_cleanup_worker.cpp  h3_cleanup_worker.h  metrics_reporter.cpp  metrics_reporter.h
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  README.md  integration_harness.h  test_ingestion_pipeline.cpp  test_integration_harness.cpp
tests/unit/: test_admin_endpoint_handler.cpp  test_admin_http_handler.cpp  test_admin_request_loop.cpp  test_admin_service.cpp  test_admin_socket_server.cpp  test_composition_root.cpp  test_config_loader.cpp  test_dedup_window.cpp  test_dependency_health_sources.cpp  test_dlq_replay_worker.cpp  test_domain_types.cpp  test_dwell_checker.cpp  test_event_bus.cpp  test_gateway_admission_control.cpp  test_gateway_processor_protobuf_runtime.cpp  test_gateway_service.cpp  test_generated_proto_domain_adapters.cpp  test_generated_protobuf_roundtrip.cpp  test_geofence_engine_service.cpp  test_geofence_evaluator.cpp  test_geofence_event_handlers.cpp  test_grpc_transport_gating.cpp  test_h3_cleanup_worker.cpp  test_h3_index.cpp  test_haversine.cpp  test_history_writer.cpp  test_kafka_protobuf_payloads.cpp  test_kafka_transport.cpp  test_latest_handler.cpp  test_location_state_query.cpp  test_matching_kafka_loop.cpp  test_matching_service.cpp  test_matching_service_lifecycle.cpp  test_metrics.cpp  test_metrics_event_handlers.cpp  test_metrics_exporter.cpp  test_metrics_reporter.cpp  test_nearby_handler.cpp  test_nearest_strategy.cpp  test_point_in_polygon.cpp  (+18 more)
