add_executable(test_haversine unit/test_haversine.cpp)
target_link_libraries(test_haversine PRIVATE sr_common)
add_test(NAME test_haversine COMMAND test_haversine)

add_executable(test_point_in_polygon unit/test_point_in_polygon.cpp)
target_link_libraries(test_point_in_polygon PRIVATE sr_geofence)
add_test(NAME test_point_in_polygon COMMAND test_point_in_polygon)

add_executable(test_validator unit/test_validator.cpp)
target_link_libraries(test_validator PRIVATE sr_gateway)
add_test(NAME test_validator COMMAND test_validator)

add_executable(test_event_bus unit/test_event_bus.cpp)
target_link_libraries(test_event_bus PRIVATE sr_common)
add_test(NAME test_event_bus COMMAND test_event_bus)

add_executable(test_location_state_query unit/test_location_state_query.cpp)
target_link_libraries(test_location_state_query PRIVATE sr_common sr_processor sr_query)
add_test(NAME test_location_state_query COMMAND test_location_state_query)
