add_executable(test_haversine unit/test_haversine.cpp)
target_link_libraries(test_haversine PRIVATE sr_common)
add_test(NAME test_haversine COMMAND test_haversine)

add_executable(test_h3_index unit/test_h3_index.cpp)
target_link_libraries(test_h3_index PRIVATE sr_common)
add_test(NAME test_h3_index COMMAND test_h3_index)

add_executable(test_point_in_polygon unit/test_point_in_polygon.cpp)
target_link_libraries(test_point_in_polygon PRIVATE sr_geofence)
add_test(NAME test_point_in_polygon COMMAND test_point_in_polygon)

add_executable(test_validator unit/test_validator.cpp)
target_link_libraries(test_validator PRIVATE sr_gateway)
add_test(NAME test_validator COMMAND test_validator)

add_executable(test_event_bus unit/test_event_bus.cpp)
target_link_libraries(test_event_bus PRIVATE sr_common)
add_test(NAME test_event_bus COMMAND test_event_bus)

add_executable(test_composition_root unit/test_composition_root.cpp)
target_link_libraries(test_composition_root PRIVATE sr_common)
add_test(NAME test_composition_root COMMAND test_composition_root)

add_executable(test_config_loader unit/test_config_loader.cpp)
target_link_libraries(test_config_loader PRIVATE sr_common)
target_compile_definitions(test_config_loader PRIVATE SIGNALROUTE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME test_config_loader COMMAND test_config_loader)

add_executable(test_domain_types unit/test_domain_types.cpp)
target_link_libraries(test_domain_types PRIVATE sr_common)
add_test(NAME test_domain_types COMMAND test_domain_types)

add_executable(test_redis_client unit/test_redis_client.cpp)
target_link_libraries(test_redis_client PRIVATE sr_common)
add_test(NAME test_redis_client COMMAND test_redis_client)

add_executable(test_postgres_client unit/test_postgres_client.cpp)
target_link_libraries(test_postgres_client PRIVATE sr_common)
add_test(NAME test_postgres_client COMMAND test_postgres_client)

add_executable(test_kafka_transport unit/test_kafka_transport.cpp)
target_link_libraries(test_kafka_transport PRIVATE sr_common)
add_test(NAME test_kafka_transport COMMAND test_kafka_transport)

add_executable(test_dedup_window unit/test_dedup_window.cpp)
target_link_libraries(test_dedup_window PRIVATE sr_processor)
add_test(NAME test_dedup_window COMMAND test_dedup_window)

add_executable(test_sequence_guard unit/test_sequence_guard.cpp)
target_link_libraries(test_sequence_guard PRIVATE sr_processor)
add_test(NAME test_sequence_guard COMMAND test_sequence_guard)

add_executable(test_state_writer unit/test_state_writer.cpp)
target_link_libraries(test_state_writer PRIVATE sr_processor)
add_test(NAME test_state_writer COMMAND test_state_writer)

add_executable(test_history_writer unit/test_history_writer.cpp)
target_link_libraries(test_history_writer PRIVATE sr_processor)
add_test(NAME test_history_writer COMMAND test_history_writer)

add_executable(test_processing_loop unit/test_processing_loop.cpp)
target_link_libraries(test_processing_loop PRIVATE sr_processor)
add_test(NAME test_processing_loop COMMAND test_processing_loop)

add_executable(test_latest_handler unit/test_latest_handler.cpp)
target_link_libraries(test_latest_handler PRIVATE sr_query)
add_test(NAME test_latest_handler COMMAND test_latest_handler)

add_executable(test_nearby_handler unit/test_nearby_handler.cpp)
target_link_libraries(test_nearby_handler PRIVATE sr_query sr_processor)
add_test(NAME test_nearby_handler COMMAND test_nearby_handler)

add_executable(test_trip_handler unit/test_trip_handler.cpp)
target_link_libraries(test_trip_handler PRIVATE sr_query)
add_test(NAME test_trip_handler COMMAND test_trip_handler)

add_executable(test_location_state_query unit/test_location_state_query.cpp)
target_link_libraries(test_location_state_query PRIVATE sr_common sr_processor sr_query)
add_test(NAME test_location_state_query COMMAND test_location_state_query)
