add_executable(test_haversine unit/test_haversine.cpp)
target_link_libraries(test_haversine PRIVATE sr_common)
add_test(NAME test_haversine COMMAND test_haversine)

add_executable(test_h3_index unit/test_h3_index.cpp)
target_link_libraries(test_h3_index PRIVATE sr_common)
add_test(NAME test_h3_index COMMAND test_h3_index)

add_executable(test_point_in_polygon unit/test_point_in_polygon.cpp)
target_link_libraries(test_point_in_polygon PRIVATE sr_geofence)
add_test(NAME test_point_in_polygon COMMAND test_point_in_polygon)

add_executable(test_validator unit/test_validator.cpp)
target_link_libraries(test_validator PRIVATE sr_gateway)
add_test(NAME test_validator COMMAND test_validator)

add_executable(test_rate_limiter unit/test_rate_limiter.cpp)
target_link_libraries(test_rate_limiter PRIVATE sr_gateway)
add_test(NAME test_rate_limiter COMMAND test_rate_limiter)

add_executable(test_gateway_service unit/test_gateway_service.cpp)
target_link_libraries(test_gateway_service PRIVATE sr_gateway)
add_test(NAME test_gateway_service COMMAND test_gateway_service)

add_executable(test_event_bus unit/test_event_bus.cpp)
target_link_libraries(test_event_bus PRIVATE sr_common)
add_test(NAME test_event_bus COMMAND test_event_bus)

add_executable(test_metrics unit/test_metrics.cpp)
target_link_libraries(test_metrics PRIVATE sr_common)
add_test(NAME test_metrics COMMAND test_metrics)

add_executable(test_metrics_event_handlers unit/test_metrics_event_handlers.cpp)
target_link_libraries(test_metrics_event_handlers PRIVATE sr_common)
add_test(NAME test_metrics_event_handlers COMMAND test_metrics_event_handlers)

add_executable(test_composition_root unit/test_composition_root.cpp)
target_link_libraries(test_composition_root PRIVATE sr_common)
add_test(NAME test_composition_root COMMAND test_composition_root)

add_executable(test_config_loader unit/test_config_loader.cpp)
target_link_libraries(test_config_loader PRIVATE sr_common)
target_compile_definitions(test_config_loader PRIVATE SIGNALROUTE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")
add_test(NAME test_config_loader COMMAND test_config_loader)

add_executable(test_domain_types unit/test_domain_types.cpp)
target_link_libraries(test_domain_types PRIVATE sr_common)
add_test(NAME test_domain_types COMMAND test_domain_types)

add_executable(test_proto_domain_conversions unit/test_proto_domain_conversions.cpp)
target_link_libraries(test_proto_domain_conversions PRIVATE sr_common)
add_test(NAME test_proto_domain_conversions COMMAND test_proto_domain_conversions)

if(SR_ENABLE_PROTOBUF)
    add_executable(test_generated_protobuf_roundtrip unit/test_generated_protobuf_roundtrip.cpp)
    target_link_libraries(test_generated_protobuf_roundtrip PRIVATE signalroute_proto)
    add_test(NAME test_generated_protobuf_roundtrip COMMAND test_generated_protobuf_roundtrip)

    add_executable(test_generated_proto_domain_adapters unit/test_generated_proto_domain_adapters.cpp)
    target_link_libraries(test_generated_proto_domain_adapters PRIVATE sr_common)
    add_test(NAME test_generated_proto_domain_adapters COMMAND test_generated_proto_domain_adapters)

    add_executable(test_kafka_protobuf_payloads unit/test_kafka_protobuf_payloads.cpp)
    target_link_libraries(test_kafka_protobuf_payloads PRIVATE sr_common)
    add_test(NAME test_kafka_protobuf_payloads COMMAND test_kafka_protobuf_payloads)
endif()

add_executable(test_redis_client unit/test_redis_client.cpp)
target_link_libraries(test_redis_client PRIVATE sr_common)
add_test(NAME test_redis_client COMMAND test_redis_client)

add_executable(test_postgres_client unit/test_postgres_client.cpp)
target_link_libraries(test_postgres_client PRIVATE sr_common)
add_test(NAME test_postgres_client COMMAND test_postgres_client)

add_executable(test_kafka_transport unit/test_kafka_transport.cpp)
target_link_libraries(test_kafka_transport PRIVATE sr_common)
add_test(NAME test_kafka_transport COMMAND test_kafka_transport)

add_executable(test_dedup_window unit/test_dedup_window.cpp)
target_link_libraries(test_dedup_window PRIVATE sr_processor)
add_test(NAME test_dedup_window COMMAND test_dedup_window)

add_executable(test_sequence_guard unit/test_sequence_guard.cpp)
target_link_libraries(test_sequence_guard PRIVATE sr_processor)
add_test(NAME test_sequence_guard COMMAND test_sequence_guard)

add_executable(test_state_writer unit/test_state_writer.cpp)
target_link_libraries(test_state_writer PRIVATE sr_processor)
add_test(NAME test_state_writer COMMAND test_state_writer)

add_executable(test_history_writer unit/test_history_writer.cpp)
target_link_libraries(test_history_writer PRIVATE sr_processor)
add_test(NAME test_history_writer COMMAND test_history_writer)

add_executable(test_processing_loop unit/test_processing_loop.cpp)
target_link_libraries(test_processing_loop PRIVATE sr_processor)
add_test(NAME test_processing_loop COMMAND test_processing_loop)

add_executable(test_processor_event_handlers unit/test_processor_event_handlers.cpp)
target_link_libraries(test_processor_event_handlers PRIVATE sr_common sr_processor)
add_test(NAME test_processor_event_handlers COMMAND test_processor_event_handlers)

add_executable(test_geofence_event_handlers unit/test_geofence_event_handlers.cpp)
target_link_libraries(test_geofence_event_handlers PRIVATE sr_geofence)
add_test(NAME test_geofence_event_handlers COMMAND test_geofence_event_handlers)

add_executable(test_processing_event_pipeline unit/test_processing_event_pipeline.cpp)
target_link_libraries(test_processing_event_pipeline PRIVATE sr_common sr_processor sr_geofence)
add_test(NAME test_processing_event_pipeline COMMAND test_processing_event_pipeline)

add_executable(test_processor_service unit/test_processor_service.cpp)
target_link_libraries(test_processor_service PRIVATE sr_processor)
add_test(NAME test_processor_service COMMAND test_processor_service)

add_executable(test_geofence_engine_service unit/test_geofence_engine_service.cpp)
target_link_libraries(test_geofence_engine_service PRIVATE sr_geofence)
add_test(NAME test_geofence_engine_service COMMAND test_geofence_engine_service)

add_executable(test_latest_handler unit/test_latest_handler.cpp)
target_link_libraries(test_latest_handler PRIVATE sr_query)
add_test(NAME test_latest_handler COMMAND test_latest_handler)

add_executable(test_query_service unit/test_query_service.cpp)
target_link_libraries(test_query_service PRIVATE sr_query)
add_test(NAME test_query_service COMMAND test_query_service)

add_executable(test_nearby_handler unit/test_nearby_handler.cpp)
target_link_libraries(test_nearby_handler PRIVATE sr_query sr_processor)
add_test(NAME test_nearby_handler COMMAND test_nearby_handler)

add_executable(test_trip_handler unit/test_trip_handler.cpp)
target_link_libraries(test_trip_handler PRIVATE sr_query)
add_test(NAME test_trip_handler COMMAND test_trip_handler)

add_executable(test_geofence_evaluator unit/test_geofence_evaluator.cpp)
target_link_libraries(test_geofence_evaluator PRIVATE sr_geofence)
add_test(NAME test_geofence_evaluator COMMAND test_geofence_evaluator)

add_executable(test_dwell_checker unit/test_dwell_checker.cpp)
target_link_libraries(test_dwell_checker PRIVATE sr_geofence)
add_test(NAME test_dwell_checker COMMAND test_dwell_checker)

add_executable(test_strategy_registry unit/test_strategy_registry.cpp)
target_link_libraries(test_strategy_registry PRIVATE sr_matching)
add_test(NAME test_strategy_registry COMMAND test_strategy_registry)

add_executable(test_reservation_manager unit/test_reservation_manager.cpp)
target_link_libraries(test_reservation_manager PRIVATE sr_matching)
add_test(NAME test_reservation_manager COMMAND test_reservation_manager)

add_executable(test_nearest_strategy unit/test_nearest_strategy.cpp)
target_link_libraries(test_nearest_strategy PRIVATE sr_matching)
add_test(NAME test_nearest_strategy COMMAND test_nearest_strategy)

add_executable(test_matching_service unit/test_matching_service.cpp)
target_link_libraries(test_matching_service PRIVATE sr_matching)
add_test(NAME test_matching_service COMMAND test_matching_service)

add_executable(test_matching_service_lifecycle unit/test_matching_service_lifecycle.cpp)
target_link_libraries(test_matching_service_lifecycle PRIVATE sr_matching)
add_test(NAME test_matching_service_lifecycle COMMAND test_matching_service_lifecycle)

add_executable(test_h3_cleanup_worker unit/test_h3_cleanup_worker.cpp)
target_link_libraries(test_h3_cleanup_worker PRIVATE sr_workers)
add_test(NAME test_h3_cleanup_worker COMMAND test_h3_cleanup_worker)

add_executable(test_dlq_replay_worker unit/test_dlq_replay_worker.cpp)
target_link_libraries(test_dlq_replay_worker PRIVATE sr_workers)
add_test(NAME test_dlq_replay_worker COMMAND test_dlq_replay_worker)

add_executable(test_metrics_reporter unit/test_metrics_reporter.cpp)
target_link_libraries(test_metrics_reporter PRIVATE sr_workers)
add_test(NAME test_metrics_reporter COMMAND test_metrics_reporter)

add_executable(test_location_state_query unit/test_location_state_query.cpp)
target_link_libraries(test_location_state_query PRIVATE sr_common sr_processor sr_query)
add_test(NAME test_location_state_query COMMAND test_location_state_query)
